tests/error/inout_errors/moved_if.err
Error: Not owned (at $FILE:13:12)
   | 
11 | def test(q: qubit, b: bool) -> None:
12 |     if b:
13 |         use(q)
   |             ^ Function `use` wants to take ownership of this argument, but
   |               `test` doesn't own `q`
   | 
11 | def test(q: qubit, b: bool) -> None:
   |          -------- Argument `q` is only borrowed. Consider taking ownership:
   |                   `q: qubit @owned`

Guppy compilation failed due to 1 previous error
